--- a/index.html
+++ b/index.html
@@ -837,11 +837,11 @@ $('.show-cart').on("change", ".item-count", function(event) {
 
 displayCart();
 
-
-
-AOS.init();
-
 </script>
+	    <script>
+		    AOS.init();
+
+	    </script>
   <script type="text/javascript" src="js/jquery-3.4.1.min.js">
   
   </script>
